修复配置字符串中包含空格读取配置错误的问题